--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ http://www.templatemo.com/tm-509-hydro
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand">Liquo</a>
+                    <a href="index.html" class="navbar-brand">EasyBook</a>
                </div>
 
                <!-- MENU LINKS -->
@@ -52,7 +52,6 @@ http://www.templatemo.com/tm-509-hydro
                          <li><a href="#home" class="smoothScroll">Home</a></li>
                          <li><a href="#about" class="smoothScroll">About</a></li>
                          <li><a href="#blog" class="smoothScroll">Blog</a></li>
-                         <li><a href="#work" class="smoothScroll">Our Work</a></li>
                          <li><a href="#contact" class="smoothScroll">Contacts</a></li>
                     </ul>
 
@@ -74,24 +73,25 @@ http://www.templatemo.com/tm-509-hydro
           <div class="container">
                <div class="row">
 
-                    <div class="col-md-6 col-sm-12">
+                    <div class="col-md-8 col-sm-12">
                          <div class="home-info">
-                              <h1>We make beautiful crafts for all people.</h1>
-                              <a href="#about" class="btn section-btn smoothScroll">Start a project</a>
+                              <h1>Where are you flying? </h1>
+                              <h4 class="subHeading">Lets help you handle your Booking/Reservations</h4>
+                              <a href="#contact" class="btn section-btn smoothScroll">Book Now</a>
                               <span>
-                                   CALL US (+234) 703-205-43-67
+                                   CALL US (+234) 813-044-87-17
                                    <small>For any inquiry</small>
                               </span>
                          </div>
                     </div>
 
-                    <div class="col-md-6 col-sm-12">
+                    <!-- <div class="col-md-4 col-sm-12">
                          <div class="home-video">
                               <div class="embed-responsive embed-responsive-16by9">
-                                   <!-- <iframe src="https://www.youtube.com/embed/AqcjdkPMPJA" frameborder="0" allowfullscreen></iframe> -->
+                                   <iframe src="https://www.youtube.com/embed/AqcjdkPMPJA" frameborder="0" allowfullscreen></iframe> 
                               </div>
                          </div>
-                    </div>
+                    </div> -->
                     
                </div>
           </div>
@@ -106,10 +106,10 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-md-5 col-sm-6">
                          <div class="about-info">
                               <div class="section-title">
-                                   <h2>Let us introduce</h2>
+                                   <h2>EasyBook: Cheap flights, incredible Services</h2>
                                    <span class="line-bar">...</span>
                               </div>
-                              <p>Liquo is your number one craft agency responsible for making your customers smile. Our portfolio speaks for us</p>
+                              <p>EasyBook is your one-stop online travel shop. So forget browsing the streets or the web for the latest flight deals. With low ticket prices on international and domestic flights from all your favourite airlines, vehicle hire options from top car rental companies and hotel reservations bookable for properties on every continent, we offer something for every traveller’s budget.</p>
                          </div>
                     </div>
 
@@ -502,6 +502,7 @@ http://www.templatemo.com/tm-509-hydro
      <script src="js/jquery.magnific-popup.min.js"></script>
      <script src="js/smoothscroll.js"></script>
      <script src="js/custom.js"></script>
+     <script src="index.js"></script>
 
 </body>
 </html>
