--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Liquo</title>
+     <title>EasyBook</title>
 <!-- 
 Hydro Template 
 http://www.templatemo.com/tm-509-hydro
@@ -378,7 +378,7 @@ http://www.templatemo.com/tm-509-hydro
 
                     <div class="col-md-5 col-sm-12">
                          <div class="footer-thumb footer-info"> 
-                              <h2>Liquo Company</h2>
+                              <h2>EasyBook Inc</h2>
                               <p>Providing value to Customers.</p>
                          </div>
                     </div>
@@ -409,7 +409,7 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-md-3 col-sm-4"> 
                          <div class="footer-thumb"> 
                               <h2>Find us</h2>
-                              <p>No. 45 Simi Junction, <br> Close to Ede Library</p>
+                              <p>No. 45 Simi Junction, <br> Close to Airport Road Akure</p>
                          </div>
                     </div>                    
 
@@ -417,12 +417,12 @@ http://www.templatemo.com/tm-509-hydro
                          <div class="footer-bottom">
                               <div class="col-md-6 col-sm-5">
                                    <div class="copyright-text"> 
-                                        <p>Copyright &copy; 2021 Liquo</p>
+                                        <p>Copyright &copy; 2022 EasyBook</p>
                                    </div>
                               </div>
                               <div class="col-md-6 col-sm-7">
                                    <div class="phone-contact"> 
-                                        <p>Call us <span>(+234) 703-205-4367</span></p>
+                                        <p>Call us <span>(+234) 813-044-8717</span></p>
                                    </div>
                                    <ul class="social-icon">
                                         <li><a href="https://www.facebook.com/templatemo" class="fa fa-facebook-square" attr="facebook icon"></a></li>
@@ -455,7 +455,7 @@ http://www.templatemo.com/tm-509-hydro
 
                                    <div class="col-md-12 col-sm-12">
                                         <div class="modal-title">
-                                             <h2>Liquo Co</h2>
+                                             <h2>EasyBook</h2>
                                         </div>
 
                                         <!-- NAV TABS -->
